<resources>

    <string name="menu_settings">Settings</string>
    <string name="title">Title</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="browse">Browse...</string>
    <string name="open_file">Open ePub file</string>
    <string name="open_library">My Books</string>
    
    <string name="show_toc">Show TOC</string>   
    <string name="rolling_blind">Auto-scroll</string>
    <string name="about">About This Book</string>
    <string name="about_gpl">PageTurner is free software under the GPL v3.</string>
    <string name="error_open_bk">Error opening book: %s</string>

    <string name="profile_day">Switch to day mode</string>  
    <string name="profile_night">Switch to night mode</string>
    <string name="manual_sync">Sync reading progress</string>
    <string name="prefs">Preferences</string>
        
    <string name="dictionary_lookup">Look up in Dictionary</string>
    <string name="wikipedia_lookup">Search on Wikipedia</string>
    <string name="google_lookup">Search on Google</string>    
    <string name="word_select">"You selected '%s'</string>    

    <string name="loading_wait">Loading, please wait</string>
    <string name="install_oi">Please install OI File Manager from the Android Market.</string>    
    
    <string name="brightness">Brightness</string>    
    
    <string name="importing">Importing %1$d of %2$d</string>
    <string name="scan_folders">Scanning for EPUB files.\nFolders scanned: %d</string>
    <string name="no_such_folder">The folder %s does not exist.</string>
    
    <string name="toc_label">Table of contents</string>
    
</resources>